force-app/main/default/objects/Shipping_Address__c/Shipping_Address__c.object-meta.xml
<CustomObject>
    <label>Shipping Address</label>
    <nameField>
        <displayFormat>SD-{000000}</displayFormat>
        <label>Shipping Address ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>