force-app/main/default/objects/Shipping_Address__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <label>District</label>
    <type>TextArea</type>
</CustomField>