force-app/main/default/objects/Shipping_Address__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <label>Province</label>
    <type>TextArea</type>
</CustomField>